# AI-ABBYY

./: .gitignore  CAStarStrategy.cpp  CAStarStrategy.hpp  CAStarStrategyOnYAGSBPL.cpp  CAStarStrategyOnYAGSBPL.hpp  CDynamicProgrammingStrategy.cpp  CDynamicProgrammingStrategy.h  CGame.cpp  CGame.hpp  CMakeLists.txt  CMap.cpp  CMap.hpp  CPlayerState.cpp  CPlayerState.hpp  CPriorityQueueExtension.hpp  CStateArray.cpp  CStateArray.h  CStrategy.cpp  CStrategy.h  CVector.cpp  CVector.h  EMoveDirection.h  README.md  SNode.hpp  main.cpp
AI/: .gitignore  AI.sdf  AI.sln
AI/AI/: AI.vcxproj  AI.vcxproj.filters  CAStarStrategyOnYAGSBPL.hpp  CDynamicProgrammingStrategy.h  CGame.cpp  CGame.hpp  CMap.cpp  CMap.hpp  CStateArray.cpp  CStateArray.h  CStrategy.cpp  CVector.cpp  CVector.h  EMoveDirection.h  StrategyDll.h  yagsbpl_base.h
AI/AI/Debug/: vc140.idb
AI/AI/planners/: A_star.h
AI/AITest/: AITest.cpp  AITest.h  AITest.vcxproj  AITest.vcxproj.filters  CMap.hpp  CPlayerState.cpp  EMoveDirection.h  IMap.h  IPlayerStateList.h  main.cpp
AI/AITest/Debug/: vc140.idb
AI/Debug/: AITest.ilk  StrategyDll.exp  StrategyDll.ilk  StrategyDll.lib
AI/Straregy/: CAStarStrategyOnYAGSBPL.cpp  CAStarStrategyOnYAGSBPL.hpp  CDynamicProgrammingStrategy.cpp  CDynamicProgrammingStrategy.h  CMap.cpp  CMap.hpp  CPlayerState.cpp  CPlayerStateList.cpp  CPlayerStateList.h  CStrategy.h  IMap.h  IPlayerStateList.h  Straregy.vcxproj  Straregy.vcxproj.filters  StrategyDll.cpp  StrategyDll.h  main.cpp
AI/Straregy/Debug/: vc140.idb
YAGSBPL-master/yagsbpl-2.1/: yagsbpl_base.h
(+27 files in other folders)
